# ht_web

./: Cargo.toml
src/: calendar.rs  main.rs  synch.rs  ws.rs
static/: index.html
static/css/: custom.css
static/js/: time.js
templates/: calendar.html
